refactor and improve code coverage
