# project/views/views.py
@@ -1,5 +1,5 @@
 import connexion
-from flask import jsonify
+from flask import current_app, jsonify, request
 from http import HTTPStatus
 
 from project.controllers.battery import battery_controller
@@ -8,23 +8,40 @@ from project.controllers.vehicle import vehicle_controller
 
 
 def get():
-    return jsonify({}), 200
+    return jsonify({}), HTTPStatus.OK
 
 
-def get_available_amps():
-    return jsonify(battery_controller.get_available_amps()), 200
-
-
-def get_charging_amps():
-    return jsonify(smart_charger_controller.get_charging_amps()), 200
+def get_battery_status():
+    status = battery_controller.get_status()
+    current_app.logger.info(f'battery_controller features: {battery_controller.features}')
+    return jsonify(status), HTTPStatus.OK
 
 
 def set_charging_amps():
+    current_app.logger.info(f'Starting set_charging_amps: {request.headers}')
+
+    current_app.logger.debug('get_available_amps')
     available_amps = battery_controller.get_available_amps()
-    charger_actual_current = vehicle_controller.get_charger_actual_current()
-    amps = smart_charger_controller.calculate_charging_amps(available_amps, charger_actual_current)
-    smart_charger_controller.set_charging_amps(amps, 'development', smart_charger_controller.features)
-    return jsonify({'charging_amps': amps}), 200
+
+    current_app.logger.debug('calculate_charging_amps')
+    amps = vehicle_controller.calculate_charging_amps(available_amps)
+
+    current_app.logger.debug('set_charging_amps')
+    features = {
+        'battery_controller': battery_controller.features,
+        'vehicle_controller': vehicle_controller.features,
+        'smart_charger_controller': smart_charger_controller.features,
+    }
+    current_app.logger.info(f'features: {features}')
+    smart_charger_controller.set_charging_amps(amps, 'development', features)
+
+    current_app.logger.info('Ending set_charging_amps successfully.')
+    return jsonify({'charging_amps': amps}), HTTPStatus.OK
+
+
+def manage_vehicle():
+    vehicle_controller.manage_vehicle()
+    return jsonify({}), HTTPStatus.OK
 
 
 def start_poll():
